# sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  CREDENTIALS.md  GETTING_STARTED.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md  USER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yaml
backend/: Dockerfile.prod  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/routes/: analysis.py  assets.py  intelligence.py  products.py  tasks.py
backend/models/: __init__.py  entities.py
backend/services/analytics/: __init__.py  attack_paths.py  predictor.py  risk_engine.py
backend/services/asm/: __init__.py  discovery.py  scanner.py
backend/services/cybint/: __init__.py  scanner.py
backend/services/fusion/: __init__.py  correlator.py
backend/services/osint/: __init__.py  collectors.py
backend/services/products/: __init__.py  current_intel.py  executive_briefs.py  iw_alerts.py  target_packages.py
backend/utils/: database.py  graph.py
backend/workers/: __init__.py  celery_app.py  tasks.py
frontend/: Dockerfile.prod  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
infrastructure/: DEPLOYMENT.md
infrastructure/kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  kustomization.yaml  namespace.yaml  neo4j-deployment.yaml
infrastructure/nginx/: nginx.conf
(+6 files in other folders)
