[tool.poetry]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel Intelligence Platform Backend"
authors = ["Diego Parra <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
neo4j = "^5.14.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
celery = {extras = ["redis"], version = "^5.3.4"}
kafka-python = "^2.0.2"
elasticsearch = {extras = ["async"], version = "^8.11.0"}
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
spacy = "^3.7.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.4"
networkx = "^3.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
reportlab = "^4.0.7"
python-pptx = "^0.6.23"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
